fix figcaption overflow test

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -215,7 +215,7 @@ a {
 
                 figcaption {
                     position: absolute;
-                    top: 125%;
+                    top: 135%;
                     bottom: 0;
                     right: 0;
                     left: 0;
